default/objects/dsfs__DocuSign_Envelope_Document__c/dsfs__DocuSign_Envelope_Document__c.object-meta.xml
<CustomObject>
    <description>DocuSign Envelope Documents</description>
    <label>DocuSign Envelope Document</label>
    <nameField>
        <displayFormat>DSED-{0000000}</displayFormat>
        <label>DocuSign Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Envelope Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>