default/objects/dsfs__DocuSign_Envelope_Document__c/fields/dsfs__Attachment_ID__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Attachment_ID__c</fullName>
    <description>Attachment ID</description>
    <inlineHelpText>Attachment ID</inlineHelpText>
    <label>Attachment ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>