default/objects/dsfs__DocuSign_Envelope_Document__c/fields/dsfs__Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Attachment_Name__c</fullName>
    <description>Attachment Name (this field is too short for many file names and has been superceded by Attachment_NameEx</description>
    <inlineHelpText>Attachment Name</inlineHelpText>
    <label>Attachment Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>