default/objects/dsfs__DocuSign_Envelope_Document__c/fields/dsfs__Attachment_NameEx__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Attachment_NameEx__c</fullName>
    <description>This longer attachment name field supercedes the Attachment_Name field which was 80 characters and could not hold the max. file name length.</description>
    <label>Attachment Name Extended</label>
    <length>255</length>
    <type>Text</type>
</CustomField>