default/objects/dsfs__DocuSign_Envelope_Document__c/fields/dsfs__Document_ID__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Document_ID__c</fullName>
    <description>Document ID</description>
    <inlineHelpText>Document ID</inlineHelpText>
    <label>Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>