default/objects/dsfs__DocuSign_Envelope_Document__c/fields/dsfs__Document_Name__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Document_Name__c</fullName>
    <label>Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>