default/objects/dsfs__DocuSign_Envelope_Document__c/fields/dsfs__Document_Order__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Document_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Document Order</description>
    <inlineHelpText>Document Order</inlineHelpText>
    <label>Document Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>