default/objects/dsfs__DocuSign_Envelope_Document__c/fields/dsfs__DocuSign_EnvelopeID__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DocuSign_EnvelopeID__c</fullName>
    <description>DocuSign Envelope ID</description>
    <inlineHelpText>DocuSign Envelope ID</inlineHelpText>
    <label>DocuSign Envelope ID</label>
    <referenceTo>dsfs__DocuSign_Envelope__c</referenceTo>
    <relationshipName>DocuSign_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>