default/objects/dsfs__DocuSign_Envelope_Document__c/fields/dsfs__External_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>dsfs__External_Document_Id__c</fullName>
    <label>External Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>