default/objects/dsfs__DocuSign_Envelope_Document__c/fields/dsfs__SFDocument_Type__c.field-meta.xml
<CustomField>
    <fullName>dsfs__SFDocument_Type__c</fullName>
    <description>Saleforce Document Type</description>
    <inlineHelpText>Saleforce Document Type</inlineHelpText>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attachment</fullName>
                <default>true</default>
                <label>Attachment</label>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>DSTemplate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>