default/objects/dsfs__DocuSign_Envelope_Document__c/listViews/dsfs__All.listView-meta.xml
<ListView>
    <fullName>dsfs__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>